--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Hello World !
-This repo will be dedicated to add-ons which are not relying to Nightingale build system, it will contains add-ons from http://publicsvn.songbirdnest.com/client/extensions/ for example
+This repo is dedicated to add-ons which are not relying to Nightingale build system, it will contains add-ons from http://publicsvn.songbirdnest.com/client/extensions/ for example
