--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 Hello World !
 This repo is dedicated to add-ons which are not relying to Nightingale build system, it will contains add-ons from http://publicsvn.songbirdnest.com/client/extensions/ for example
+
+If you are looking for downloads go here : http://addons.getnightingale.com/
+
