Cleaned up Venkman manifest includes. Removed all links to songbirdnest and adjusted the comments accordingly.  Didn't change any namespaces to avoid conflicts. Updated build script to include version in xpi. Added .gitignore to exclude *.xpi, since the packaged xpi will change filenames on every new version.

--- a/developertools/chrome/locale/en-US/overlay.dtd
+++ b/developertools/chrome/locale/en-US/overlay.dtd
@@ -15,3 +15,5 @@
 <!ENTITY sbdevtools.menu.createfeathers "Create Feathers...">
 <!ENTITY sbdevtools.menu.createextension "Create Extension...">
 <!ENTITY sbdevtools.menu.linkexistingextension "Link Extension in Test Mode...">
+<!ENTITY sbdevtools.menu.xpcomviewer "XPCOM Viewer...">
+<!ENTITY sbdevtools.menu.xpcomviewer.key "X">
